Сделали шапку и начали блок продукта

--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -37,3 +37,13 @@ input[type="radio"].visually-hidden {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: content-box;
+}
