--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -5,6 +5,7 @@
   padding: 0px 89px;
   background-color: #151b28;
   background-size: 2000px 0px;
+  margin-bottom: 99px;
 
   &__inner {
     display: flex;
@@ -17,6 +18,7 @@
     display: flex;
     width: 34px;
     height: 34px;
+
     p {
       margin: 0px;
       margin-left: 15px;
