--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,5 @@
 @import "source/sass/page-header.scss";
 @import "source/sass/main-nav.scss";
 @import "source/sass/slider.scss";
+@import "source/sass/product.scss";
+@import "source/sass/flashcard.scss";
