--- a/source/sass/font-face.scss
+++ b/source/sass/font-face.scss
@@ -13,3 +13,11 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+  font-family: "Crimson_textitalic";
+    src: url(../font/crimsontext-italic-webfont.woff2) format("woff2"),
+        url(../font/crimsontext-italic-webfont.woff) format("woff");
+    font-weight: normal;
+    font-style: italic;
+}
