--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,5 +1,6 @@
 $font-size-h1: 24px;
-$font-size-h2: 16px;
+$font-size--h2: 16px;
+$font-size--h3: 48px;
 
 
 $font-family: "Montserrat", "Arial", sans-serif;
