Добавили блок товаров и информации

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,3 +6,4 @@
 @import "source/sass/slider.scss";
 @import "source/sass/product.scss";
 @import "source/sass/flashcard.scss";
+@import "source/sass/information.scss";
