--- a/source/sass/flashcard.scss
+++ b/source/sass/flashcard.scss
@@ -1,5 +1,4 @@
 .flashcard {
-  position: relative;
 
   &__title {
     margin: 0px;
@@ -9,6 +8,50 @@
     color: #d89b64;
     text-align: center;
     text-transform: uppercase;
+
+    &--name {
+      color: #000;
+    }
+  }
+
+  &__item {
+    display: flex;
+    position: relative;
+    align-self: center;
+  }
+
+  &__item {
+
+    &--desser::before,
+    &--breakf::before {
+      position: absolute;
+      content: "";
+      left: 0px;
+      width: 100%;
+      height: 490px;
+      background-color: rgba(68, 73, 83, 0.8);
+    }
+
+    &--smooth::before {
+      position: absolute;
+      content: "";
+      width: 567px;
+      height: 695px;
+      background-color: white;
+      -webkit-box-shadow: 0px 0px 183px 0px rgba(229, 230, 235, 0.004);
+      box-shadow: 0px 0px 183px 0px rgb(229, 230, 235);
+      z-index: -1;
+    }
+  }
+
+  &__image {
+    width: 651px;
+    height: 490px;
+
+    &--foto {
+      width: 569px;
+      height: 695px;
+    }
   }
 
   &__inner {
@@ -16,6 +59,12 @@
     left: 98px;
     top: 180px;
     width: 466px;
+
+    &--item {
+      position: absolute;
+      left: 54px;
+      top: 482px;
+    }
   }
 
   &__text {
@@ -23,5 +72,9 @@
     font-family: "Crimson Text", sans-serif;
     font-weight: normal;
     color: #ffffff;
+
+    &--desc {
+      color: #8b909d;
+    }
   }
 }
