--- a/source/sass/product.scss
+++ b/source/sass/product.scss
@@ -1,5 +1,6 @@
 .product {
-
+  position: relative;
+  margin-bottom: 90px;
 
   &__list {
     margin: 0px;
@@ -7,17 +8,63 @@
     list-style: none;
   }
 
+  &__wrapper {
+    margin-bottom: 100px;
+  }
+
+  &__wrapper::before {
+    position: absolute;
+    content: "";
+    left: 700px;
+    top: -23px;
+    width: 589px;
+    height: 189px;
+    background-image: url(../img/gratia.png);
+  }
+
   &__title {
     margin: 0px;
+    padding-bottom: 5px;
     font-size: $font-size--h3;
     line-height: $font-size--h3 + 36;
     text-align: center;
     text-transform: uppercase;
   }
 
+  &__text {
+    margin: 0;
+    padding: 0;
+    font-family: "Crimson Text", sans-serif;
+    font-weight: normal;
+    text-align: center;
+    color: #8a8f9c;
+  }
+
   &__list {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+  }
+
+  &__link {
+    display: block;
+    position: relative;
+    margin-top: 91px;
+    font-size: $font-size--h4;
+    line-height: 84px;
+    letter-spacing: 0.075em;
+    text-transform: uppercase;
+    text-align: center;
+    color: #d59963;
+
+    &::before {
+      position: absolute;
+      content: "";
+      top: 60px;
+      width: 242px;
+      height: 1px;
+      background-color: #d89b64;
+      opacity: 0.50;
+    }
   }
 }
