--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,4 @@
 @import "source/sass/product.scss";
 @import "source/sass/flashcard.scss";
 @import "source/sass/information.scss";
+@import "source/sass/promo.scss";
