--- a/source/sass/promo.scss
+++ b/source/sass/promo.scss
@@ -1,15 +1,10 @@
-.product {
+.promo {
   position: relative;
-  margin-bottom: 90px;
 
   &__list {
     margin: 0px;
     padding: 0px;
     list-style: none;
-  }
-
-  &__wrapper {
-    margin-bottom: 100px;
   }
 
   &__wrapper::before {
@@ -19,6 +14,7 @@
     top: 0px;
     width: 589px;
     height: 189px;
+    margin-bottom: 77px;
     background-image: url(../img/gratia.png);
   }
 
@@ -44,28 +40,30 @@
   &__list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
-  &__link {
-    display: block;
+  &__item {
     position: relative;
-    margin-top: 91px;
-    font-size: $font-size--h4;
-    line-height: 84px;
-    letter-spacing: 0.075em;
-    text-transform: uppercase;
-    text-align: center;
-    color: #d59963;
+    width: 636px;
+    height: 300px;
+    background-color: rgb(248, 248, 248);
 
     &::before {
       position: absolute;
       content: "";
-      top: 60px;
-      width: 242px;
-      height: 1px;
-      background-color: #d89b64;
-      opacity: 0.50;
+      left: 245px;
+      top: 55px;
+      width: 79px;
+      height: 175px;
+      background-image: url(../img/4-promo.png);
     }
+  }
+
+  &__inner {
+    position: absolute;
+    left: 77px;
+    top: 110px;
+    width: 467px;
   }
 }
