Начали подвал на главной

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,3 +8,5 @@
 @import "source/sass/flashcard.scss";
 @import "source/sass/information.scss";
 @import "source/sass/promo.scss";
+@import "source/sass/page-footer.scss";
+@import "source/sass/social.scss";
