Нарезка картинок и разметка страницы меню

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,3 +10,4 @@
 @import "source/sass/promo.scss";
 @import "source/sass/page-footer.scss";
 @import "source/sass/social.scss";
+@import "source/sass/catalog.scss";
