--- a/source/sass/catalog.scss
+++ b/source/sass/catalog.scss
@@ -1,10 +1,49 @@
 .catalog {
   display: flex;
   flex-direction: column;
+  position: relative;
   margin: 0 auto;
+  margin-bottom: 205px;
   padding: 0px 89px;
 
+  &__wrapper {
+    margin-bottom: 122px;
+  }
+
+  &__wrapper::before {
+    position: absolute;
+    content: "";
+    left: 700px;
+    top: 0px;
+    width: 589px;
+    height: 189px;
+    background-image: url(../img/gratia.png);
+  }
+
+  &__title {
+    margin: 0px;
+    padding-top: 23px;
+    padding-bottom: 5px;
+    font-size: $font-size--h3;
+    line-height: $font-size--h3 + 36;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  &__text {
+    margin: 0px;
+    padding: 0px;
+    padding-bottom: 40px;
+    font-family: "Crimson Text", sans-serif;
+    font-weight: normal;
+    text-align: center;
+    color: #8a8f9c;
+  }
+
   &__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     margin: 0px;
     padding: 0px;
     list-style: none;
@@ -12,6 +51,9 @@
 
   &__item {
     position: relative;
+    width: 562px;
+    height: 694px;
+    margin-bottom: 68px;
 
     &::before {
       position: absolute;
@@ -22,6 +64,48 @@
       -webkit-box-shadow: 0px 0px 183px 0px rgba(229, 230, 235, 0.004);
       box-shadow: 0px 0px 183px 0px rgb(229, 230, 235);
       z-index: -1;
+    }
+  }
+
+  &__item:nth-child(4),
+  &__item:nth-child(5),
+  &__item:nth-child(6) {
+    margin: 0px;
+  }
+
+  &__image {
+    display: block;
+    width: 562px;
+    height: 411px;
+  }
+
+  &__text-block {
+    margin: 0px;
+    font-family: "Crimson Text", sans-serif;
+    font-weight: normal;
+    color: #8b909d;
+    text-align: center;
+  }
+
+  &__name {
+    position: relative;
+    margin: 0px;
+    margin-bottom: 20px;
+    padding-top: 60px;
+    font-size: $font-size--h3;
+    line-height: $font-size--h3 + 46;
+    color: #000000;
+    text-align: center;
+    text-transform: uppercase;
+
+    &::after {
+      position: absolute;
+      content: "";
+      left: 259px;
+      bottom: 5px;
+      width: 43px;
+      height: 1px;
+      background-color: rgba(21, 27, 41, 0.1);
     }
   }
 }
